trying to increase jvm memory in help.sh
git-svn-id: https://svn.code.sf.net/p/iwant/code/trunk@443 b1b70e83-b727-4846-b4cf-edd8a5b4313f